Add persistent log for exceptions on api.

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,8 @@ services:
       - MONGOURL=mongodb://mongodb:27017/
     ports:
       - "8000:8000"
+    volumes:
+      - ./api/logs:/code/logs
   vulnerability-cli:
     build: ./cli
     volumes:
