--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,5 +6,7 @@ COPY ./src/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
  
 COPY ./src/main.py ./main.py
+COPY ./src/tests/ ./tests/
+
 
 CMD ["fastapi", "run", "./main.py", "--port", "8000"]
